分析模板/2026.05.12/周三008_朗斯vs巴黎圣曼_源数据.md
# 赔率分析源数据

> 数据来源：500.com 竞彩足球 | 编号：周三008 | 采集日期：2026-05-14

---

## 一、比赛基本信息

| 字段 | 内容 |
|------|------|
| 主队 | 朗斯 |
| 客队 | 巴黎圣曼 |
| 比赛时间 | 2026-05-14 03:00 |
| 赛事 | 法甲 |
| 让球 | 1 |
| 主队近况 | 近10场，6胜2平2负 进23球 失14球 胜率60% 赢盘率30% 大球率80% |
| 客队近况 | 近10场，7胜2平1负 进23球 失10球 胜率70% 赢盘率70% 大球率60% |
| 主队近况走势 | - |
| 主队盘路走势 | - |
| 客队近况走势 | - |
| 客队盘路走势 | - |
| 历史交锋 | 朗斯 0胜0和6负 |
| 澳门推荐 |  |
| 澳门分析 |  |

---

## 二、初盘赔率（共30家公司）

```python
initial_odds = [
    # 格式: (主胜, 平局, 客胜)  # 公司名
    (2.90, 3.75, 1.93),  # 竞*官*
    (3.50, 3.50, 1.95),  # 威**尔
    (2.82, 3.73, 2.03),  # *门
    (3.40, 3.90, 1.95),  # 立*
    (3.30, 3.70, 2.00),  # **t3*5
    (3.20, 4.00, 2.05),  # I***rw**t*n
    (3.30, 3.85, 2.05),  # *冠
    (3.30, 3.70, 1.97),  # 易*博
    (3.13, 3.70, 2.00),  # 伟*
    (3.40, 3.90, 1.95),  # B**n
    (3.70, 3.70, 1.91),  # Pi****le平*
    (3.30, 3.70, 2.01),  # 10**t
    (3.40, 3.90, 1.95),  # C***l
    (3.09, 3.57, 2.01),  # 利*
    (3.40, 3.70, 2.00),  # U****t (优*客)
    (3.40, 3.90, 1.95),  # S***t**g**t (博*堂)
    (3.25, 3.85, 1.96),  # IBC**t (沙*)
    (3.15, 3.75, 2.01),  # M****on88 (明*)
    (3.30, 3.85, 2.05),  # 金*博
    (3.30, 3.75, 1.77),  # 香**会
    (3.15, 3.75, 2.01),  # 12**t (壹*博)
    (3.40, 3.50, 1.95),  # 88******
    (3.30, 3.70, 2.05),  # 大巨*
    (3.40, 4.10, 1.99),  # 必*
    (3.70, 3.70, 1.90),  # 18**t
    (3.58, 3.90, 2.09),  # 1x**t
    (3.25, 3.95, 2.02),  # **ts**n
    (3.25, 3.65, 1.91),  # I***rt*ps
    (3.55, 3.60, 1.93),  # **t-at-H**e
    (3.30, 3.90, 1.95),  # **tf**g
]
```

---

## 三、即时赔率（共30家公司）

```python
realtime_odds = [
    # 格式: (主胜, 平局, 客胜)  # 公司名
    (2.90, 3.75, 1.93),  # 竞*官*
    (3.30, 3.60, 1.95),  # 威**尔
    (2.90, 3.73, 2.00),  # *门
    (3.30, 3.90, 2.00),  # 立*
    (3.40, 4.00, 1.95),  # **t3*5
    (3.40, 3.95, 2.00),  # I***rw**t*n
    (3.25, 4.15, 2.00),  # *冠
    (3.30, 3.80, 1.97),  # 易*博
    (3.30, 3.75, 1.93),  # 伟*
    (3.30, 4.00, 1.98),  # B**n
    (3.51, 4.00, 2.01),  # Pi****le平*
    (3.40, 3.90, 1.97),  # 10**t
    (3.30, 4.00, 2.00),  # C***l
    (3.16, 3.46, 2.02),  # 利*
    (3.45, 4.00, 1.90),  # U****t (优*客)
    (3.30, 4.00, 1.98),  # S***t**g**t (博*堂)
    (3.15, 3.85, 1.99),  # IBC**t (沙*)
    (3.15, 3.85, 1.99),  # M****on88 (明*)
    (3.50, 3.80, 1.99),  # 金*博
    (3.30, 3.75, 1.77),  # 香**会
    (3.15, 3.85, 1.99),  # 12**t (壹*博)
    (3.30, 3.60, 1.95),  # 88******
    (3.45, 4.00, 2.01),  # 大巨*
    (3.55, 4.20, 2.02),  # 必*
    (3.30, 3.90, 2.00),  # 18**t
    (3.58, 4.02, 2.05),  # 1x**t
    (3.20, 3.90, 2.08),  # **ts**n
    (3.25, 3.75, 1.91),  # I***rt*ps
    (3.45, 4.00, 2.00),  # **t-at-H**e
    (3.40, 3.90, 1.95),  # **tf**g
]
```

---

## 四、竞彩官方赔率

```python
# 竞彩官方赔率
jc_odds = {
    '胜': 1.68,
    '平': 3.95,
    '负': 3.56
}
```

---

## 五、快速复制数据块

```python
# ===== 竞彩赔率 =====
JC_WIN = 1.68
JC_DRAW = 3.95
JC_AWAY = 3.56

# ===== 初盘赔率（澳门，第3家）=====
MAC_INIT = (2.82, 3.73, 2.03)

# ===== 即时赔率（澳门，第3家）=====
MAC_REAL = (2.90, 3.73, 2.00)

# ===== 变动 =====
MAC_CHG = (
    round(float(MAC_REAL[0]) - float(MAC_INIT[0]), 2),
    round(float(MAC_REAL[1]) - float(MAC_INIT[1]), 2),
    round(float(MAC_REAL[2]) - float(MAC_INIT[2]), 2)
)

# ===== 澳门推荐 =====
MACAO_TIP = ""
```
